--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <h1>Work Anywhere<br>Anytime</h1>
             <h6>Be Part of Our Global Community</h6>
             <div class="d-flex flex-row">
-                <button type="button" class="btn btn-primary d-flex align-items-center justify-content-center">Hire A Tallent</button>
-                <button type="button" class="btn btn-primary d-flex align-items-center justify-content-center">Be A Tallent</button>
+                <a href="signup-company.html" class="btn btn-primary d-flex align-items-center justify-content-center">Hire A Tallent</a>
+                <a href="signup-talent.html" class="btn btn-primary d-flex align-items-center justify-content-center">Be A Tallent</a>
             </div>
         </div>
     </section>
