--- a/company-profile.html
+++ b/company-profile.html
@@ -14,18 +14,18 @@
 
 <body>
     <div class="wrapper"></div>
-    <section class="navbar-section mb-5">
+    <section class="navbar-section mb-4">
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-light">
-                <a class="navbar-brand order-md-1" href="#"><img src="assets/img/logo_talenthub.png" alt=""></a>
+                <a class="navbar-brand order-md-1" href="company-dashboard.html"><img src="assets/img/logo_talenthub.png" alt="logo digitalent hub"></a>
                 <div class="navbar-control-box order-md-3">
-                    <a class="navbar-notification-box" data-bs-toggle="popover" data-bs-placement="left"
-                        data-bs-content-id="popover-content" tabindex="0" role="button" data-trigger="focus">
+                    <a class="navbar-notification-box" data-bs-toggle="popover1" data-bs-placement="bottom"
+                        data-bs-content-id="popover-content" tabindex="0" role="button">
                         <div class="navbar-notification"></div>
-                        
+
                     </a>
-                    <a class="navbar-img-box" data-bs-toggle="popover" data-bs-placement="left"
-                        data-bs-content-id="popover-content2" tabindex="0" role="button" data-trigger="focus">
+                    <a class="navbar-img-box" data-bs-toggle="popover2" data-bs-placement="bottom"
+                        data-bs-content-id="popover-content2" tabindex="0" role="button">
                         <div class="navbar-img"></div>
                     </a>
                 </div>
@@ -36,10 +36,10 @@
                 <div class="collapse navbar-collapse order-md-2" id="navbarNav">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Find Job</a>
+                            <a class="nav-link" href="company-dashboard.html">Find Job</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Find Session</a>
+                            <a class="nav-link" href="talent-session-dashboard.html">Find Session</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Applied Job</a>
@@ -84,7 +84,11 @@
                                     <span class="icon-edit"></span><a href="#">Edit Profile</a>
                                 </div>
                             </div>
-                            <div class="btn btn-primary justify-content-end w-100"><a href="#">Post A Job</a></div>
+                            <a href="company-post-project.html" class="btn btn-primary justify-content-end w-100 d-flex justify-content-center align-items-center">
+                                <div>
+                                    Post A Job
+                                </div>
+                            </a>
                         </div>
                     </div>
                     <div class="card-desc-box mt-4 col-md-9">
@@ -195,7 +199,8 @@
                                     </div>
                                 </div>
                                 <div class="btn btn-primary justify-content-end w-100 white"
-                                    onclick="close_edit_company();"><a href="#">Cancel</a></div>
+                                    onclick="close_edit_company();"><a href="#">Cancel</a>
+                                </div>
                             </div>
                         </div>
                         <div class="card-desc-box mt-4 col-md-9 order-2 order-md-3">
@@ -361,19 +366,24 @@
             company.classList.remove("d-none");
             editcompany.classList.add("d-none");
         }
-        const list = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
-        list.map((el) => {
-            let opts = {
-                animation: false,
+        $('[data-bs-toggle="popover1"]').popover({
+            html: true,
+            placement: "bottom",
+            content: function () {
+                return $('#popover-content').html();
             }
-            if (el.hasAttribute('data-bs-content-id')) {
-                opts.content = document.getElementById(el.getAttribute('data-bs-content-id')).innerHTML;
-                opts.html = true;
-                opts.placement = "bottom";
-
+        }).click(function (e) {
+            $('[data-bs-toggle="popover1"]').not(this).popover('hide');
+        });
+        $('[data-bs-toggle="popover2"]').popover({
+            html: true,
+            placement: "bottom",
+            content: function () {
+                return $('#popover-content2').html();
             }
-            new bootstrap.Popover(el, opts);
-        })
+        }).click(function (e) {
+            $('[data-bs-toggle="popover2"]').not(this).popover('hide');
+        });
     </script>
 </body>
 
