--- a/company-project.html
+++ b/company-project.html
@@ -17,15 +17,15 @@
     <section class="navbar-section mb-4">
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-light">
-                <a class="navbar-brand order-md-1" href="#"><img src="assets/img/logo_talenthub.png" alt=""></a>
+                <a class="navbar-brand order-md-1" href="company-dashboard.html"><img src="assets/img/logo_talenthub.png" alt="logo digitalent hub"></a>
                 <div class="navbar-control-box order-md-3">
-                    <a class="navbar-notification-box" data-bs-toggle="popover" data-bs-placement="left"
-                        data-bs-content-id="popover-content" tabindex="0" role="button" data-trigger="focus">
+                    <a class="navbar-notification-box" data-bs-toggle="popover1" data-bs-placement="bottom"
+                        data-bs-content-id="popover-content" tabindex="0" role="button">
                         <div class="navbar-notification"></div>
 
                     </a>
-                    <a class="navbar-img-box" data-bs-toggle="popover" data-bs-placement="left"
-                        data-bs-content-id="popover-content2" tabindex="0" role="button" data-trigger="focus">
+                    <a class="navbar-img-box" data-bs-toggle="popover2" data-bs-placement="bottom"
+                        data-bs-content-id="popover-content2" tabindex="0" role="button">
                         <div class="navbar-img"></div>
                     </a>
                 </div>
@@ -36,10 +36,10 @@
                 <div class="collapse navbar-collapse order-md-2" id="navbarNav">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Find Job</a>
+                            <a class="nav-link" href="company-dashboard.html">Find Job</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Find Session</a>
+                            <a class="nav-link" href="talent-session-dashboard.html">Find Session</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Applied Job</a>
@@ -54,14 +54,15 @@
             <div class="card w-100">
                 <div class="card-body row">
                     <div class="col-12">
-                        <div class="btn btn-primary btn-list-apply justify-content-end mt-4 mt-lg-0">
+                        <a href="company-list-applicant.html" class="btn btn-primary btn-list-apply d-flex justify-content-center align-items-center mt-4 mt-lg-0 text-decoration-none">
                             <div id="editProfile" class="btn-icon-text-box">
-                                <a href="#" class="text-decoration-none">List Applicant</a>
+                                List Applicant
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-12 col-lg-9">
                         <div class="card-text-box">
+                            <p class="card-text mt-3 mt-lg-4 mb-3 mb-lg-5">#AD230</p>
                             <p class="card-title d-block blue mb-4 text-justify">UI Designer</p>
                             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and
                                 typesetting industry. Lorem Ipsum has been the industry's standard dummy text
@@ -103,6 +104,7 @@
                 <div class="card-body row">
                     <div class="col-12 col-lg-9">
                         <div class="card-text-box">
+                            <p class="card-text mt-3 mt-lg-4 mb-3 mb-lg-5">#AD230</p>
                             <div class="form-group mb-2">
                                 <input placeholder="Project name" type="text" class="form-control input-project-name" id="talentName"
                                     aria-describedby="talentName">
@@ -131,6 +133,9 @@
                                     <a href="#" class="text-decoration-none">Save</a>
                                 </div>
                             </div>
+                            <div class="btn btn-primary justify-content-end w-100 white"
+                                    onclick="close_edit_project();"><a href="#">Cancel</a>
+                                </div>
                             <div class="card-text-box text-center">                                
                                 <div class="form-group">
                                     <label class="card-text" for="projectSalary">Salary</label>
@@ -288,19 +293,24 @@
             project.classList.remove("d-none");
             editProject.classList.add("d-none");
         }
-        const list = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
-        list.map((el) => {
-            let opts = {
-                animation: false,
+        $('[data-bs-toggle="popover1"]').popover({
+            html: true,
+            placement: "bottom",
+            content: function () {
+                return $('#popover-content').html();
             }
-            if (el.hasAttribute('data-bs-content-id')) {
-                opts.content = document.getElementById(el.getAttribute('data-bs-content-id')).innerHTML;
-                opts.html = true;
-                opts.placement = "bottom";
-
+        }).click(function (e) {
+            $('[data-bs-toggle="popover1"]').not(this).popover('hide');
+        });
+        $('[data-bs-toggle="popover2"]').popover({
+            html: true,
+            placement: "bottom",
+            content: function () {
+                return $('#popover-content2').html();
             }
-            new bootstrap.Popover(el, opts);
-        })
+        }).click(function (e) {
+            $('[data-bs-toggle="popover2"]').not(this).popover('hide');
+        });
     </script>
 </body>
 
