--- a/signup-talent.html
+++ b/signup-talent.html
@@ -24,8 +24,12 @@
         </div>
         <div class="form-box">
             <img class="form-logo" src="assets/img/logo_text_digitalenthub.svg" alt="logo Digitalent hub">
-            <p class="form-title">Sign Up</p><p class="form-subtitle">Hire A Talent</p>
-            <form class="d-flex justify-content-centers align-items-start" action="signup-company.html">
+            <p class="form-title">Sign Up</p><p class="form-subtitle">Be A Talent</p>
+            <form class="d-flex justify-content-centers align-items-start" action="talent-dashboard.html">
+                <div class="form-group mb-3">
+                    <label class="form-label" for="email">Email</label>
+                    <input placeholder="Email" type="text" class="form-control" id="email" required="true">
+                </div>
                 <div class="form-group mb-3">
                     <label class="form-label" for="username">Username</label>
                     <input placeholder="Username" type="text" class="form-control" id="username" required="true">
